# fs-cv-metrics

./: .gitignore  404.html  README.md  example.py  example_coco.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
api/loggers/: index.html
api/object-detection/: index.html
api/results/: index.html
api/segmentation/: index.html
contributing/documentation/: index.html
docs/: index.md
docs/api/: index.md  loggers.md  object-detection.md  results.md  segmentation.md
docs/contributing/: documentation.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: extensions.md  object-detection.md  segmentation.md
foresight_metrics/: __init__.py  results.py
foresight_metrics/loggers/: __init__.py  base.py  clearml.py  stdout.py
foresight_metrics/tasks/: __init__.py
foresight_metrics/tasks/object_detection/: __init__.py  types.py
foresight_metrics/tasks/object_detection/formats/: __init__.py  base.py  coco.py  internal.py
foresight_metrics/tasks/object_detection/metrics/: __init__.py  base.py  map.py  precision_recall.py
foresight_metrics/tasks/segmentation/: __init__.py  types.py
foresight_metrics/tasks/segmentation/formats/: __init__.py  base.py  numpy_format.py
foresight_metrics/tasks/segmentation/metrics/: __init__.py  base.py  dice.py  iou.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
user-guide/extensions/: index.html
user-guide/object-detection/: index.html
user-guide/segmentation/: index.html
